fix: production readiness - dynamic CORS, env-based API URL, optimized Dockerfiles, React Router flags

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,5 @@ GEMINI_API_KEY=your-gemini-api-key
 RESEND_API_KEY=re_your-resend-api-key
 PORT=3001
 NODE_ENV=development
+CORS_ORIGINS=http://localhost:3000
+APP_URL=http://localhost:3000
