--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci --only=production
 
 COPY . .
 
+RUN mkdir -p uploads
+
 EXPOSE 3001
 
-CMD ["npm", "run", "dev"]
+CMD ["node", "src/index.js"]
